update function CRUD product

--- a/Microservices/product-service/src/main/resources/application.yml
+++ b/Microservices/product-service/src/main/resources/application.yml
@@ -22,3 +22,12 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+# Custom JWT config
+jwt:
+  secret: my_super_secret_jwt_key_1234567890
+  expiration: 36000000 # milliseconds (10h)
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+
